--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
-  display: flex;
+  /* display: flex; */
   justify-content: center;
+  place-content: center;
   align-items: center;
   height: 100vh;
   /* Ensure the container takes the full height of the viewport */
